Closed
Bug 1439732
Opened 4 years ago
Closed 4 years ago
backout bug 1415991 (removed signed unpacked add-on support)
Categories
(Core :: Security: PSM, defect, P1)
Core
Security: PSM
Tracking
()
RESOLVED
FIXED
People
(Reporter: keeler, Assigned: keeler)
References
Details
(Whiteboard: [psm-assigned])
Attachments
(2 files)
30.94 KB,
patch
|
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
1.19 KB,
patch
|
jcj
:
review+
|
Details | Diff | Splinter Review |
This bug will track backing out bug 1415991. https://treeherder.mozilla.org/#/jobs?repo=try&revision=fdbd7da7ccbbf2da230119ca776616547f0f2a89
![]() |
Assignee | |
Comment 1•4 years ago
|
||
This is just `hg backout 0a5795108e0a`.
![]() |
Assignee | |
Comment 2•4 years ago
|
||
This is a fixup for 60 only due to bug 1421084.
Attachment #8952555 -
Flags: review?(jjones)
Comment 3•4 years ago
|
||
Comment on attachment 8952555 [details] [diff] [review] fixup for 60 Review of attachment 8952555 [details] [diff] [review]: ----------------------------------------------------------------- Yup.
Attachment #8952555 -
Flags: review?(jjones) → review+
Shouldn't we also back this out from 59?
Flags: needinfo?(dkeeler)
Pushed by dkeeler@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4560309df57b fixup for backing out bug 1415991 post bug 1421084 (so Firefox 60 only) r=jcj
![]() |
Assignee | |
Comment 6•4 years ago
|
||
Yes - once this lands on central I'll ask for beta uplift for just the backout patch (unless we need to move faster than that and I'll ask for uplift sooner).
Flags: needinfo?(dkeeler)
Comment 7•4 years ago
|
||
Revision on m-c https://hg.mozilla.org/mozilla-central/rev/4560309df57b52d4946e309d12c150ddef61ef66
![]() |
Assignee | |
Comment 8•4 years ago
|
||
Comment on attachment 8952554 [details] [diff] [review] backout patch Approval Request Comment [Feature/Bug causing the regression]: bug 1415991 (removing support for verifying signatures on signed unpacked add-ons) [User impact if declined]: signed unpacked add-ons will break for users before we've had a chance to deprecate them properly [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: n/a [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: not very [Why is the change risky/not risky?]: this is a straight-forward backout. It just returns the code to where it was before bug 1415991 landed (and on 59, nothing else seems to have affected the behavior of that code, so we don't even need to make additional changes to make that work) [String changes made/needed]: none
Attachment #8952554 -
Flags: approval-mozilla-beta?
status-firefox59:
--- → affected
Comment on attachment 8952554 [details] [diff] [review] backout patch Backing this out from beta as discussed over email. This should land for tomorrow's beta 12 build.
Attachment #8952554 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/293cb8267530
You need to log in
before you can comment on or make changes to this bug.
Description
•