bug 1439732 - fixup for backing out bug 1415991 post bug 1421084 (so Firefox 60 only) r=jcj

MozReview-Commit-ID: 4Hn9mt1TWwN